assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro:400,600,700');

html, body {
    font-family: 'Source Sans Pro', Arial,Noto Sans,sans-serif;
    margin: 0;
    padding: 0;
    text-rendering: geometricPrecision;
}

body {
    background-color: #f8f9fa;
    font-size: 1.1em;
}

.carousel-inner img {
    margin: auto;
}

footer {
    margin: 32px;
}

.navbar-brand {
    font-family: 'Source Sans Pro', Arial, sans-serif;
    font-size: 1.65em;
}

h1 {
    font-family: 'Oswald', sans-serif;
    padding: 24px 0;
    text-align: center;
    text-transform: uppercase;
}

h1, h2, h3 {
    margin: 24px 0;
}

th a, th a:visited, th a:active {
    color: #333333;
}

.faq-entry {
    margin-bottom: 40px;
}

.faq-entry h4 {
    font-weight: bold;
    margin-bottom: 16px;
    text-decoration: underline;
    padding-bottom: 3px
}

.faq-entry h5 {
    font-weight: bold;
    margin: 16px 0;
}

.list-group-item-action {
    padding: 1rem 1.75rem 1rem 1.5rem;
}

.list-group-item-action:hover {
    background-color: #FFEAEF;
}

.oswald {
    font-family: 'Oswald', sans-serif;
}

.nav-item {
    padding-left: 16px;
}

.nav-link, .nav-link:visited, .nav-link:active {
    color: #777777 !important;
}

.nav-link:hover {
    color: #fe0038 !important;
    opacity: 0.5;
}

.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
    background-color: #FFEAEF;
}

.table {
    border: 1px solid #e1e1e1;
}

.table thead th {
    border-bottom: 2px solid #e1e1e1;
}

.table td {
    border-bottom: 1px solid #e1e1e1;
    border-top: 1px solid #e1e1e1;
    text-align: center;
    vertical-align: middle;
}

.table th {
    border-bottom: 1px solid #e1e1e1;
    border-top: 1px solid #e1e1e1;
    vertical-align: middle;
}

.footer, .footer:visited, .footer:active {
    color: #292b2c;
}

.footer:hover {
    color: #292b2c;
}

.footer-underlined, .footer-underlined:visited, .footer-underlined:active {
    color: #292b2c;
    text-decoration: underline;
}

.footer-underlined:hover {
    color: #292b2c;
    text-decoration: none;
}

.review {
    background-color: white;
    border: 1px solid #e1e1e1;
    border-radius: 8px;
    color: #777;
    padding: 24px;
    text-align: center;
}

.review img {
    width: 96px;
}

.review-author {
    color: #212529;
    font-size: 1.2em;
    font-weight: 600;
    padding-top: 16px;
}

.review-row {
    margin: 24px 0;
}

.try-now {
    background-color: #fe0038;
    color: white;
    font-family: 'Source Sans Pro', Arial, sans-serif;
    font-size: 16px;
    font-weight: 700;
    line-height: 14px;
    margin-left: 24px;
    padding: 10px 20px;
    text-transform: uppercase;
}

.try-now:hover {
    background-color: #266fff;
    color: white;
}

#content {
    margin-top: 32px;
}

.navbar {
    background-color: white;
    box-shadow: 0 0.12rem 0.125rem 0 rgba(0,0,0,0.05);
    font-weight: 500;
    line-height: 86px;
}

#icon {
    height: auto;
    -webkit-animation: rotating 1.5s;
    -moz-animation: rotating 1.5s;
    -ms-animation: rotating 1.5s;
    -o-animation: rotating 1.5s;
    animation: rotating 1.5s;
}

#google-play img {
    -webkit-transition: 0.2s;
    opacity: 1;
}

#google-play img:hover {
    opacity: 0.6;
}

@-webkit-keyframes rotating {
    from {
        -ms-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -webkit-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    to {
        -ms-transform: rotate(360deg);
        -moz-transform: rotate(360deg);
        -webkit-transform: rotate(360deg);
        -o-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}

@keyframes rotating {
    from {
        -ms-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -webkit-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    to {
        -ms-transform: rotate(360deg);
        -moz-transform: rotate(360deg);
        -webkit-transform: rotate(360deg);
        -o-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}


li i {
    color: green;
    margin-right: 12px;
}

.green {
    color: green;
}

.red {
    color: #d60001;
}

#google-translate-element {
    background-color: white;
    border-top: 1px solid #e1e1e1;
    bottom: 0;
    left: 0;
    padding: 28px 24px;
    position: fixed;
    right: 0;
}

@media only screen and (min-width: 1200px) {
    #google-translate-element {
        background-color: transparent;
        border: 0;
        right: auto;
        padding: 24px 24px;
    }
}

